@@ -32,16 +32,16 @@ table {
 
 
 /* BODY */
-body {background:none; color:#333; font-family:'Open Sans', sans-serif; font-size:0.9em; line-height:1.5em; word-wrap:break-word;}
+body {background:none; color:#333; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; word-wrap:break-word;}
 
 
 /* HEADINGS */
-h1 {clear:both; margin:0 0 10px; font-size:2.25em; line-height:1.25em;}
-h2 {clear:both; margin:0 0 10px; font-size:1.80em; line-height:1.25em;}
-h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5em;}
-h4 {clear:both; margin:0 0 10px; font-size:1.20em; line-height:1.5em;}
-h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:1.5em;}
-h6 {clear:both; margin:0 0 10px; font-size:0.80em; line-height:2em;}
+h1 {clear:both; margin:0 0 10px; font-size:2.2em; line-height:1.25;}
+h2 {clear:both; margin:0 0 10px; font-size:1.75em; line-height:1.25;}
+h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5;}
+h4 {clear:both; margin:0 0 10px; font-size:1.2em; line-height:1.5;}
+h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:2;}
+h6 {clear:both; margin:0 0 10px; font-size:0.8em; line-height:2;}
 
 
 /* LINKS AND HTML TAGS */
@@ -49,15 +49,15 @@ a {text-decoration:none; color:#21759b;}
 a:hover {text-decoration:underline;}
 
 strong, b {font-weight:bold;}
-small {font-size:0.80em;}
-big {font-size:1.20em;}
+small {font-size:0.8em;}
+big {font-size:1.2em;}
 sub {vertical-align:sub; font-size:0.9em;}
 sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#21759b;}
 cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:0 0 10px; padding:5px 10px; white-space:pre-wrap; border:1px solid #999;}
-blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #999;}
+blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; font-style:italic; border-left:2px solid #999;}
 address {margin:0 0 10px; font-style:italic;}
 p {margin:0 0 10px;}
 hr {height:1px; background:#999; border:0; margin:0 0 10px;}
