@@ -1,11 +1,11 @@
 === DarkElements ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 5.7
+Version: 5.8
 Requires at least: 4.2
-Tested up to: 4.8
+Tested up to: 4.9
 License: GNU General Public License v3 or later
-License URI: http://www.gnu.org/licenses/gpl-3.0.html
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 
 
@@ -45,11 +45,10 @@ You can set a page title and content above your posts via WordPress Dashboard > 
 
 And you can change the way how posts are displayed via WordPress Dashboard > Appearance > Customize.
 
-
 == Copyright ==
 = Fonts =
 * Font: Open Sans
-* Source: http://www.google.com/fonts/specimen/Open+Sans
+* Source: https://fonts.google.com/specimen/Open+Sans
 * Copyright author: Steve Matteson
 * Apache License, version 2.0
 * http://www.apache.org/licenses/LICENSE-2.0.html
@@ -58,17 +57,16 @@ And you can change the way how posts are displayed via WordPress Dashboard > App
 * Item: boats.jpg
 * Item: back.png
 * Copyright author: Guido van der Leest
-* Author URI: http://www.guidovanderleest.nl
+* Author URI: https://www.guidovanderleest.nl
 * GNU General Public License v3 or later
-* http://www.gnu.org/licenses/gpl-3.0.html
+* https://www.gnu.org/licenses/gpl-3.0.html
 
 = Reset stylesheet =
 * Included in file style.css
-* Source: http://meyerweb.com/eric/tools/css/reset
+* Source: https://meyerweb.com/eric/tools/css/reset
 * Author: Eric Meyer
-* Author URI: http://meyerweb.com/ 
+* Author URI: https://meyerweb.com/ 
 * License: none (public domain) 
-
 
 == Notes ==
 = Translation =
