@@ -1,13 +1,13 @@
 /*
 Theme Name: DarkElements
-Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 5.7
+Theme URI: https://www.guidovanderleest.nl/darkelements
+Version: 5.8
 Author: Guido van der Leest
-Author URI: http://www.guidovanderleest.nl
+Author URI: https://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
 Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 License: GNU General Public License v3 or later
-License URI: http://www.gnu.org/licenses/gpl-3.0.html
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: darkelements
 
 This theme, like WordPress, is licensed under the GPL.
@@ -59,7 +59,7 @@ table {
 
 
 /* BODY AND CONTAINER */
-body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-size:0.9em; line-height:1.5em; text-align:left; word-wrap:break-word;}
+body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; text-align:left; word-wrap:break-word;}
 #container {max-width:1000px; position:relative; margin:20px 0 20px 20px;}
 #container:after {content:''; display:block; height:0; clear:both;}
 
@@ -69,12 +69,12 @@ body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-siz
 
 
 /* HEADINGS */
-h1 {clear:both; margin:0 0 10px; font-size:2.25em; line-height:1.25em;}
-h2 {clear:both; margin:0 0 10px; font-size:1.80em; line-height:1.25em;}
-h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5em;}
-h4 {clear:both; margin:0 0 10px; font-size:1.20em; line-height:1.5em;}
-h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:1.5em;}
-h6 {clear:both; margin:0 0 10px; font-size:0.80em; line-height:2em;}
+h1 {clear:both; margin:0 0 10px; font-size:2.2em; line-height:1.25;}
+h2 {clear:both; margin:0 0 10px; font-size:1.75em; line-height:1.25;}
+h3 {clear:both; margin:0 0 10px; font-size:1.45em; line-height:1.5;}
+h4 {clear:both; margin:0 0 10px; font-size:1.2em; line-height:1.5;}
+h5 {clear:both; margin:0 0 10px; font-size:1em; line-height:2;}
+h6 {clear:both; margin:0 0 10px; font-size:0.8em; line-height:2;}
 
 
 /* LINKS AND HTML TAGS */
@@ -82,15 +82,15 @@ a {text-decoration:none; color:#aaa;}
 a:hover {text-decoration:none; color:#e77776;}
 
 strong, b {font-weight:bold;}
-small {font-size:0.80em;}
-big {font-size:1.20em;}
+small {font-size:0.8em;}
+big {font-size:1.2em;}
 sub {vertical-align:sub; font-size:0.9em;}
 sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#e77776;}
 cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:0 0 10px; padding:5px 10px; white-space:pre-wrap; border:1px solid #444;}
-blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #ddd;}
+blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; font-style:italic; border-left:2px solid #ddd;}
 address {margin:0 0 10px; font-style:italic;}
 p {margin:0 0 10px;}
 hr {height:1px; background:#444; border:0; margin:0 0 10px;}
@@ -188,7 +188,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 .page-title {margin:0 0 20px;}
 .blog-page-text {clear:both; margin:0 0 20px;}
 .archive-description {width:100%; clear:both; float:left; font-style:italic;}
-.pagelink {width:100%; clear:both; float:left; padding:20px 0 10px;}
+.pagelink {width:100%; clear:both; float:left; padding:20px 0;}
 
 
 /* POST */
@@ -253,7 +253,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .comment-list .children > li {margin:0 0 0 10px;}
 .comment-body {background:none; border:1px solid #444; border-radius:5px; padding:10px; margin:0 0 20px;}
 .comment-content {padding:10px 0;}
-.comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
+.comment-notes, .form-allowed-tags {font-size:0.8em; padding:5px 0;}
 .comments-title {margin:0 0 20px; font-size:1.45em;}
 .comment-reply-title, .no-comments {margin:0; font-size:1.45em;}
 .comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
@@ -296,19 +296,22 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* MOBILE */
 @media screen and (max-width:767px) { 
 	/* BODY AND CONTAINER */
-	body {font-size:1em; line-height:1.5em;}
+	body {font-size:15px; line-height:1.5;}
 	body.custom-background {background-image:none !important;}
 	#container {width:96%; padding:10px 2%; margin:0 auto 0; background:#333 url('images/back.png');}
 
 	/* MAIN CONTENT AREA */
 	#content {width:100%; clear:both; float:left; padding:10px 0 20px; background:none;}
 
+	/* HEADINGS */
+	h1 {font-size:1.75em;}
+
 	/* SIDEBAR */
 	#sidebar {width:100%; clear:both; padding:0; background:none;}
 
 	/* SIDEBAR LOGO */
 	.logo {padding:10px 0 20px;}
-	.logo h1 {font-size:2.25em;}
+	.logo h1 {font-size:2em;}
 	.logo h2 {padding:0; font-size:1.45em;}
 	.logo img {padding:0;}
 
@@ -332,10 +335,6 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 	/* HEADER IMAGE MOBILE */
 	#header-image-mobile {display:block; width:100%; float:left; margin:0 0 20px;}
-
-	/* HEADINGS */
-	.post-title, .page-title, .post-title-single {font-size:1.80em;}
-	.widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.45em;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
